--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "date-fns": "^2.29.3",
     "eslint": "8.30.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
     "react": "18.2.0",
+    "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.9.4"
   },
   "devDependencies": {
+    "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
     "tailwindcss": "^3.2.4"
