--- a/package.json
+++ b/package.json
@@ -23,12 +23,17 @@
     "react-date-range": "^1.4.0",
     "react-dom": "18.2.0",
     "tailwind-scrollbar-hide": "^1.1.7",
-    "typescript": "4.9.4"
+    "typescript": "4.9.4",
+    "@googlemaps/react-wrapper": "^1.1.35",
+    "@googlemaps/typescript-guards": "^2.0.3",
+    "fast-equals": "^4.0.3"
   },
   "devDependencies": {
     "@types/react-date-range": "^1.4.4",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.20",
-    "tailwindcss": "^3.2.4"
+    "tailwindcss": "^3.2.4",
+    "@types/google.maps": "^3.51.0",
+    "typescript": "^4.9.4"
   }
 }
