--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.9.4",
     "@googlemaps/react-wrapper": "^1.1.35",
-    "@googlemaps/typescript-guards": "^2.0.3",
-    "fast-equals": "^4.0.3"
+    "@googlemaps/typescript-guards": "^2.0.3"
   },
   "devDependencies": {
     "@types/react-date-range": "^1.4.4",
